test/compile-fail/resolution/conflicts/bindings/top.rhdl
fn a(x: b, x: c) {}
struct b {}
struct c {}
